# CollaborativeAuthenticationApplication

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: array.h  common.h  ecc_arithmetic.c  ecc_arithmetic.h  ecc_point.h  hash.c  hash.h  interface.c  interface.h  inversion.c  inversion.h  jni_c_wrapper.c  jni_c_wrapper_crypto.c  mod_arithmetic.c  mod_arithmetic.h  mp_arithmetic.c  mp_arithmetic.h  schnorr.c  schnorr.h  secret_sharing.c  secret_sharing.h  signatureThresholdInterface.c  signatureThresholdInterface.h  signed_arithmetic.c  signed_arithmetic.h  threshold_signature.c  threshold_signature.h
app/src/main/res/drawable-anydpi/: ic_service_status_not.xml
app/src/main/res/layout/: activity_debug.xml  activity_distributed_key_generation.xml  activity_key_management.xml  activity_main.xml  activity_receive_new_share.xml  activity_signature.xml  fragment_credential_management.xml  fragment_device_selection.xml  fragment_error.xml  fragment_error_signature.xml  fragment_extend.xml  fragment_finish.xml  fragment_finished.xml  fragment_generation.xml  fragment_home.xml  fragment_key_recovery.xml  fragment_leader_found.xml  fragment_management_waiting_for_leader.xml  fragment_mode_selection.xml  fragment_mode_selection_fragement.xml  fragment_refresh.xml  fragment_secret_overview.xml  fragment_secret_overview_key_management.xml  fragment_secret_overview_signature.xml  fragment_select_parameters.xml  fragment_signature.xml  fragment_verify_signature.xml  fragment_waiting_for_leader.xml  item_credential.xml  item_messages.xml  item_options.xml  (+1 more)
(+412 files in other folders)
